project(Engine)

cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -o0 -std=c++11 -Wall")

AUX_SOURCE_DIRECTORY(src SRC)
AUX_SOURCE_DIRECTORY(src/Core SRC_CORE)  
AUX_SOURCE_DIRECTORY(src/GUI SRC_GUI)
AUX_SOURCE_DIRECTORY(src/Render SRC_RENDER)
AUX_SOURCE_DIRECTORY(src/IO SRC_IO)
AUX_SOURCE_DIRECTORY(src/Demo SRC_DEMO)

add_executable(${PROJECT_NAME} ${SRC} ${SRC_CORE} ${SRC_GUI} ${SRC_RENDER} ${SRC_IO} ${SRC_DEMO})

INCLUDE(FindPkgConfig)


PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)


INCLUDE_DIRECTORIES(src ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES})
